# pydantic_br

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: ci.yaml
changelog/: index.html
docs/: changelog.md  index.md  install.md  maintainer.md
docs/Uso/: Tipos de Campos.md
docs/src/exceptions/: fieldmaskerror.py  fieldtyperror.py
docs/src/fields/: cep.py  cepdigits.py  cepmask.py  certidao.py  certidaodigits.py  certidaomask.py  cnh.py  cnpj.py  cnpjdigits.py  cnpjmask.py  cns.py  cpf.py  cpfdigits.py  cpfmask.py  pis.py  pisdigits.py  pismask.py  placaveiculo.py  renavam.py  sigla_estado.py  te.py
docs/usage/: descriptions.md  exceptions.md  field_types.md
docs_src/fields/: cpf.py  cpfdigits.py
docs_src/fields/cpf/: 002.py  004.py  005.py
install/: index.html
maintainer/: index.html
pydantic_br/: __init__.py  errors.py  field_class_errors.py  field_errors.py  field_erros.py  fields.py  get_versions.py  utils.py
pydantic_br/errors/: __init__.py  cpf.py  fields.py
pydantic_br/fields/: base_field.py  base_field_class.py  base_field_errors.py  base_field_v1.py  base_field_v2.py  cep_field.py  certidao_field.py  cnh_field.py  cnpj.py  cnpj_field.py  cns_field.py  cpf.py  cpf_field.py  pis_field.py  placa_veiculo_field.py  renavam_field.py  sigla_estado_field.py  te_field.py
pydantic_br/tools/: get_versions.py
pydantic_br/validators/: __init__.py  base_validator.py  cep_validator.py  certidao_validator.py  cnh_validator.py  cnpj.py  cnpj_validator.py  cns_validator.py  cpf.py  cpf_validator.py  pis_validator.py  placa_veiculo_validator.py  renavam_validator.py  sigla_estado_validator.py  te_validator.py
src/exceptions/: fielddigitserror.py  fieldinvaliderror.py  fieldtyperror.py
src/fields/: certidao.py  certidaomask.py  cnh.py  cnpjdigits.py  pisdigits.py  pismask.py  te.py
tests/: doc.py  test_base.py  test_cep.py  test_certidao.py  test_cnh.py  test_cnpj.py  test_cns.py  test_cpf.py  test_cpf_geral.py  test_pis.py  test_placa_veiculo.py  test_renavam.py  test_sigla_estado.py  test_te.py
tests/test_cpf/: test_cpf_geral.py
usage/descriptions/: index.html
usage/exceptions/: index.html
usage/field_types/: index.html
