[tool.poetry]
name = "pydantic-br"
version = "0.1.0"
description = ""
authors = ["Jorge Silva <jorgesilva.ti@hotmail.com>"]
readme = "README.md"
packages = [{include = "pydantic_br"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
ignr = "^2.2"
pydantic = "^1.10.7"
pre-commit = "^3.2.1"


[tool.poetry.group.doc.dependencies]
mkdocstrings = "^0.20.0"
mkdocstrings-python = "^0.8.3"
mkdocs-material = "^9.1.4"
pymdown-extensions = "^9.10"
mkdocs = "^1.4.2"


[tool.poetry.group.lint.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
mypy = "^1.1.1"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
faker = "^18.3.1"
pydantic = "^1.10.7"

[tool.isort]
profile = "black"

[tool.flake8]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
