[tool.poetry]
name = "pydantic-br"
version = "0.2.0"
description = "Pydantic library extension with Brazilian fields"
license = "MIT"
authors = ["Jorge Silva <jorgesilva.ti@hotmail.com>"]
maintainers = ["Jorge Silva <jorgesilva.ti@hotmail.com>"]
readme = "README.md"
repository = "https://github.com/scjorge/pydantic_br"
documentation = "https://pydantic-br.readthedocs.io"
keywords = ["pydantic", "json", "json-schema", "hints", "parsin", "brasil", "documentos", "br", "fastapi", "doc", "documento"]
packages = [{include = "pydantic_br"}]
classifiers = [
    "Natural Language :: Portuguese",
    "Framework :: Pydantic",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology"
]

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
ignr = "^2.2"
pydantic = "^1.10.7"
pre-commit = "^3.2.1"
taskipy = "^1.10.4"


[tool.poetry.group.doc.dependencies]
mkdocstrings = "^0.20.0"
mkdocstrings-python = "^0.8.3"
mkdocs-material = "^9.1.4"
pymdown-extensions = "^9.10"
mkdocs = "^1.4.2"
mkdocs-git-revision-date-plugin = "^0.3.2"


[tool.poetry.group.lint.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
mypy = "^1.1.1"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
faker = "^18.3.1"
pydantic = "^1.10.7"

[tool.isort]
profile = "black"

[tool.flake8]
profile = "black"

[tool.taskipy.tasks]
lint_black = "black --check --diff pydantic_br"
lint_isort = "isort --check --diff pydantic_br"
lint_mypy = "mypy pydantic_br"
test = "pytest tests -s -x --cov=tests -v"
rec = "poetry export -o requirements.txt  --only dev"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
