[tool.poetry]
name = "pydantic-br"
version = "1.0.1"
description = "Pydantic library extension with Brazilian fields"
license = "MIT"
authors = ["Jorge Silva <jorgesilva.ti@hotmail.com>"]
maintainers = ["Jorge Silva <jorgesilva.ti@hotmail.com>"]
readme = "README.md"
repository = "https://github.com/scjorge/pydantic_br"
documentation = "https://pydantic-br.readthedocs.io"
keywords = ["pydantic", "json", "json-schema", "hints", "parsin", "brasil", "documentos", "br", "fastapi", "doc", "documento", "schema"]
packages = [{include = "pydantic_br"}]
classifiers = [
    "Natural Language :: Portuguese",
    "Framework :: Pydantic",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology"
]

[tool.poetry.dependencies]
python = "^3.8.1"


[tool.poetry.group.dev.dependencies]
ignr = "^2.2"
pre-commit = "^3.2.1"
taskipy = "^1.10.4"
pydantic = "^2.8.2"


[tool.poetry.group.doc.dependencies]
mkdocstrings = "^0.20.0"
mkdocstrings-python = "^0.8.3"
mkdocs-git-revision-date-plugin = "^0.3.2"
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.30"
pymdown-extensions = "^10.9"


[tool.poetry.group.lint.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.1.1"
flake8 = "^7.1.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
faker = "^18.3.1"
pydantic = "^2.8.2"

[tool.isort]
profile = "black"

[tool.flake8]
profile = "black"

[tool.mypy]
exclude = 'pydantic_br/field_errors.py'

[tool.taskipy.tasks]
lint = "black pydantic_br && isort pydantic_br && mypy pydantic_br && flake8 pydantic_br"
test = "pytest tests -s -x --cov --cov-report=term-missing -v -s"
rec = "poetry export -o requirements.txt  --only dev"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
